<resources>
    <string name="app_name">VeganApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Paswoord</string>
    <string name="prompt_first_name">Voornaam</string>
    <string name="prompt_last_name">Achternaam</string>
    <string name="action_sign_in">Inloggen</string>
    <string name="action_sign_up">Registreer</string>
    <string name="error_invalid_email">email is niet correct</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Dit veld is verplicht</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_product_details">Product Details</string>
    <string name="action_product_in_cart">IN WINKELMAND</string>
    <string name="action_mark_product_invalid">INCORRECT</string>
    <string name="available_in_supermarkets">Verkrijgbaar in</string>
    <string name="title_activity_overview">Overview</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_signup">Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rate_product_action">beoordelen</string>
    <string name="action_member_already">Al geregistreerd? Login</string>
    <string name="creating_account">Account aanmaken...</string>
    <string name="signup_failed">Registratie onsuccesvol</string>
    <string name="error_too_short">minstens 3 karakters</string>
    <string name="error_password_wrong_length">moet tussen 4 en 30 karakters zijn</string>
    <string name="title_activity_main">Overzicht</string>
    <string name="added_to_favorites">Toegevoegd aan favorieten</string>
    <string name="removed_from_favorites">Verwijderd uit favorieten</string>
    <string name="action_search">Zoeken</string>
    <string name="product_already_exists">Product bestaat al.</string>
    <string name="scan_barcode">Scan de barcode in</string>
    <string name="prompt_brandname">Merk</string>
    <string name="prompt_product_name">Product naam</string>
    <string name="prompt_labels">Labels</string>
    <string name="untitled_product">Onbenoemd Product</string>
    <string name="found_in_supermarket">Selecteer de supermarkt</string>
    <string name="action_done">Klaar</string>
    <string name="prompt_choose_supermarket">Selecteer de supermarket</string>
    <string name="fetching_location">Locatie Berekenen</string>
    <string name="prompt_take_picture">Neem een product foto</string>
    <string name="prompt_save_product">Product Opslaan</string>
    <string name="yes">ja</string>
    <string name="no">nee</string>
    <string name="error_min_one_label">Minstens 1 label is verplicht</string>
    <string name="creating_product">Product aanmaken</string>
    <string name="creating_product_success">Product opgeslagen</string>
    <string name="creating_product_failure">Product opslaan mislukt</string>
    <string name="loading">Laden …</string>
    <string name="cancel">Annuleer</string>
    <string name="rate">Beoordeel</string>
    <string name="give_rating">Geef een rating</string>
    <string name="suggestions">Suggesties</string>
</resources>
